--- a/public/index.html
+++ b/public/index.html
@@ -37,9 +37,12 @@
 			<div class="row">
 				<div class="col-sm-3 col-md-2 sidebar">
 					<ul class="nav nav-sidebar">
-						<li class="header"><a>Shell list <span class="sr-only">(current)</span></a></li>
-						<li ng-class="{active: currentShellId == key}" ng-repeat="(key, shell) in shells"><a ng-click="selectShell(key)">{{shell.ip}} #{{key}}</a></li>
-						<li ng-show="!haveShells()"><a>No shells</a></li>
+						<li class="header"><a>Shell list</a></li>
+						<li ng-class="{active: currentShellId == key}" ng-repeat="(key, shell) in shells | notDead"><a ng-click="selectShell(key)">{{shell.ip}} #{{key}}</a></li>
+						<li ng-show="!haveNonDeadShells()"><a>No shells</a></li>
+						<li class="header"><a>Offline shell list</a></li>
+						<li ng-class="{active: currentShellId == key}" ng-repeat="(key, shell) in shells | dead"><a ng-click="selectShell(key)">{{shell.ip}} #{{key}}</a></li>
+						<li ng-show="!haveDeadShells()"><a>No shells</a></li>
 					</ul>
 				</div>
 				<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
